--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 
 			<div id="phrase" class="section">
-				<ul></ul>
+				<ul id='phraseUL'></ul>
 			</div>
 
 			<div id="qwerty" class="section">
@@ -64,11 +64,11 @@
 
 			<div id="scoreboard" class="section">
 				<ol>
-					<li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
-					<li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
-					<li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
-					<li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
-					<li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
+					<li class="tries"><img class='life' src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
+					<li class="tries"><img class='life' src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
+					<li class="tries"><img class='life' src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
+					<li class="tries"><img class='life' src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
+					<li class="tries"><img class='life' src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
 				</ol>
 			</div>
 		</div>
